--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "latest",
     "lowdb": "^3.0.0",
+    "moment": "^2.29.1",
     "react": "latest",
     "react-dom": "latest",
     "react-quill": "^1.3.5",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "latest"
   },
   "scripts": {
