--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "5.0.0",
   "private": true,
   "dependencies": {
+    "0xsequence": "^0.35.12",
+    "@0xsequence/ethauth": "0.6.0",
+    "@0xsequence/web3modal": "2.0.0",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "latest",
+    "@walletconnect/web3-provider": "^1.7.1",
+    "ethers": "^5.5.4",
     "lowdb": "^3.0.0",
     "moment": "^2.29.1",
     "react": "latest",
     "react-dom": "latest",
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "node-polyfill-webpack-plugin": "^1.1.4"
   },
   "scripts": {
     "tsc": "./node_modules/.bin/tsc",
